Tournament - get all tournament +get tournament by id